--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -52,12 +52,12 @@
 
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Map</a></li>
+          <li><a href="" ng-click="switchModes('map')">Map</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="" ng-click="switchViews('/api/events/current/','Current')">Current</a></li>
-              <li><a href="" ng-click="switchViews('/api/events/upcoming/','Upcoming')">Upcoming</a></li>
+              <li><a href="" ng-click="switchViews('/api/events/current/','current')">Current</a></li>
+              <li><a href="" ng-click="switchViews('/api/events/upcoming/','upcoming')">Upcoming</a></li>
               <!--// display a list of events organized by user or for which user has said she has an intention
               commented out as it is in V2.
                TBD: are there any time filters at play here
