--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -17,179 +17,180 @@
   <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBJfRs5m2aIl3cKjMy0es9Fh6-EJeXpP4k" async defer></script>
 </head>
 
-<body  ng-app="ocellus">
-  <div ng-controller="mapController">
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ocellusNav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <span class="navbar-brand" href="#">{{strings.app_name}}</span>
+<body ng-app="ocellus" ng-controller="mapController">
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ocellusNav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <span class="navbar-brand" href="#">{{strings.app_name}}</span>
+      </div>
+
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="ocellusNav">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Create Event <span class="caret"></span></a>
+            <ul class="dropdown-menu" id="categories">
+              <li> <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}">Create event at current location</a></li>
+              <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Create event at specified address</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
+            <ul class="dropdown-menu" id="categories">
+              <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <label for="searchText" class="sr-only">Search events</label>
+            <input type="text" id="searchText" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
+          </div>
+        </form>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="" ng-click="switchModes('text')">Text only</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="" ng-click="switchViews('/api/events/current/','current')">Current</a></li>
+              <li><a href="" ng-click="switchViews('/api/events/upcoming/','upcoming')">Upcoming</a></li>
+              <!--// display a list of events organized by user or for which user has said she has an intention
+              commented out as it is in V2.
+               TBD: are there any time filters at play here
+              <li><a href="" ng-click="showMyEvents()">My events</a></li>
+              -->
+              <li role="separator" class="divider"></li>
+              <li><a>Current center: <strong>{{center.lat}} {{center.lng}}</strong> </a></li>
+              <li><a>Markers: <strong>{{markersAll.length}}</strong></a></li>
+              <li><a>Cat Filtered Markers: <strong>{{markers.length}}</strong></a></li>
+              <li><a>Search Filtered Markers: <strong>{{markersFiltered.length}}</strong></a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+  <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    {{alert.message}}
+  </div>
+
+  <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
+
+  <!-- Create Modal -->
+  <div class="modal fade" id="bofModal" tabindex="-1" role="dialog" aria-labelledby="bofModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
         </div>
-
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="ocellusNav">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Create Event <span class="caret"></span></a>
-              <ul class="dropdown-menu" id="categories">
-                <li> <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}">Create event at current location</a></li>
-                <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Create event at specified address</a></li>
-              </ul>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
-              <ul class="dropdown-menu" id="categories">
-                <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <label for="searchText" class="sr-only">Search events</label>
-              <input type="text" id="searchText" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
-            </div>
-          </form>
-
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="" ng-click="switchModes('text')">Text only</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="" ng-click="switchViews('/api/events/current/','current')">Current</a></li>
-                <li><a href="" ng-click="switchViews('/api/events/upcoming/','upcoming')">Upcoming</a></li>
-                <!--// display a list of events organized by user or for which user has said she has an intention
-                commented out as it is in V2.
-                 TBD: are there any time filters at play here
-                <li><a href="" ng-click="showMyEvents()">My events</a></li>
-                -->
-                <li role="separator" class="divider"></li>
-                <li><a>Current center: <strong>{{center.lat}} {{center.lng}}</strong> </a></li>
-                <li><a>Markers: <strong>{{markersAll.length}}</strong></a></li>
-                <li><a>Cat Filtered Markers: <strong>{{markers.length}}</strong></a></li>
-                <li><a>Search Filtered Markers: <strong>{{markersFiltered.length}}</strong></a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-    <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      {{alert.message}}
-    </div>
-
-    <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
-
-    <!-- Create Modal -->
-    <div class="modal fade" id="bofModal" tabindex="-1" role="dialog" aria-labelledby="bofModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
-          </div>
-          <div class="modal-body">
-            <div ng-include="'views/event-create.html'"></div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="postBof" ng-click="postEvent()">{{strings.modal_post}}</button>
-          </div>
+        <div class="modal-body">
+          <div ng-include="'views/event-create.html'"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="postBof" ng-click="postEvent()">{{strings.modal_post}}</button>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Edit Modal -->
-    <div class="modal fade" id="bofModalEdit" tabindex="-1" role="dialog" aria-labelledby="bofModalEditLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="bofModalEditLabel">Edit Event</h4>
-          </div>
-          <div class="modal-body">
-            <div ng-include="'views/event-edit.html'"></div>
-          </div>
-          <div class="modal-footer container-flex">
-            <div class="row">
-              <div class="col-lg-6">
-                <button type="button" class="btn btn-danger pull-left" ng-click="eventEditCancel()">Cancel Event</button>
-              </div>
-              <div class="col-lg-6">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="eventEditPost()">Save Event</button>
-              </div>
-            </div>
-
-          </div>
+  <!-- Edit Modal -->
+  <div class="modal fade" id="bofModalEdit" tabindex="-1" role="dialog" aria-labelledby="bofModalEditLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="bofModalEditLabel">Edit Event</h4>
         </div>
-      </div>
-    </div>
-
-
-    <!-- My Events Modal -->
-    <div class="modal fade" id="myEventsModal" tabindex="-1" role="dialog" aria-labelledby="myEventsLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myEventsLabel">My Events</h4>
-          </div>
-          <div class="modal-body">
-            <div ng-include="'views/myevents.html'">
+        <div class="modal-body">
+          <div ng-include="'views/event-edit.html'"></div>
+        </div>
+        <div class="modal-footer container-flex">
+          <div class="row">
+            <div class="col-lg-6">
+              <button type="button" class="btn btn-danger pull-left" ng-click="eventEditCancel()">Cancel Event</button>
+            </div>
+            <div class="col-lg-6">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" ng-click="eventEditPost()">Save Event</button>
             </div>
           </div>
+
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Coords LookUp Modal -->
-    <div class="modal fade" id="coordsLookUpModal" tabindex="-1" role="dialog" aria-labelledby="coordsLookUpLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="coordsLookUpLabel">Specify Address</h4>
-          </div>
-          <div class="modal-body">
-            <div ng-include="'views/coords-lookup.html'"></div>
+
+  <!-- My Events Modal -->
+  <div class="modal fade" id="myEventsModal" tabindex="-1" role="dialog" aria-labelledby="myEventsLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myEventsLabel">My Events</h4>
+        </div>
+        <div class="modal-body">
+          <div ng-include="'views/myevents.html'">
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- libraries -->
-    <script src="bower_components/leaflet/dist/leaflet.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
-    </script>
-    <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
-    <script src="bower_components/jquery/jquery.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
-    <script src="bower_components/ui-leaflet/dist/ui-leaflet.min.js"></script>
-    <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
-    <script src="bower_components/underscore/underscore-min.js"></script>
-    <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
-    <!-- grunt concatenated app files -->
-    <script src="js/dist/all.min.js"></script>
+  <!-- Coords LookUp Modal -->
+  <div class="modal fade" id="coordsLookUpModal" tabindex="-1" role="dialog" aria-labelledby="coordsLookUpLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="coordsLookUpLabel">Specify Address</h4>
+        </div>
+        <div class="modal-body">
+          <div ng-include="'views/coords-lookup.html'"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- libraries -->
+
+  <script src="bower_components/leaflet/dist/leaflet.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
+  </script>
+  <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
+  <script src="bower_components/ui-leaflet/dist/ui-leaflet.min.js"></script>
+  <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
+  <script src="bower_components/underscore/underscore-min.js"></script>
+  <script src="bower_components/moment/min/moment.min.js"></script>
+  <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
+  <!-- grunt concatenated app files -->
+  <script src="js/dist/all.min.js"></script>
 
 
-  </div>  
+
 </body>
 
 </html>
