--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen">
 </head>
 
-<body ng-controller="mapController">
+<body ng-controller="mapController" ng-cloak>
 
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand">{{strings.app_name}}</span>
+        <span class="navbar-brand">Ocellus</span>
       </div>
 
 
@@ -36,11 +36,11 @@
 
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter by category <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
               <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
+              <li><a href="#" ng-click="filter_category('all')">All categories</a></li>
             </ul>
           </li>
         </ul>
@@ -64,11 +64,13 @@
                TBD: are there any time filters at play here
               <li><a href="" ng-click="showMyEvents()">My events</a></li>
               -->
+              <!--
               <li role="separator" class="divider"></li>
               <li><a>Current center: <strong>{{center.lat}} {{center.lng}}</strong> </a></li>
               <li><a>Markers: <strong>{{markersAll.length}}</strong></a></li>
               <li><a>Cat Filtered Markers: <strong>{{markers.length}}</strong></a></li>
               <li><a>Search Filtered Markers: <strong>{{markersFiltered.length}}</strong></a></li>
+              -->
             </ul>
           </li>
         </ul>
@@ -114,14 +116,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
+            <h4 class="modal-title" id="bofModalLabel">Create event</h4>
           </div>
           <div class="modal-body">
             <div ng-include="'views/event-create.html'"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" ng-click="postEvent()">{{strings.modal_post}}</button>
+            <button type="button" class="btn btn-primary" ng-click="postEvent()">Add Event</button>
           </div>
         </div>
       </div>
