--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css">
 </head>
 
-<body ng-app="ocellus" ng-controller="mapController">
+<body ng-app="ocellus" ng-controller="mapController" ng-cloak>
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand" href="#">{{strings.app_name}}</span>
+        <span class="navbar-brand" href="#">Ocellus</span>
       </div>
 
 
@@ -38,19 +38,19 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Create Event <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
-              <li> <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}">Create event at current location</a></li>
-              <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Create event at specified address</a></li>
+              <li> <a href="" ng-click="createEventCurrentlocation()" title="Create event at current location">Create event at current location</a></li>
+              <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Create event at specified address">Create event at specified address</a></li>
             </ul>
           </li>
         </ul>
 
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter by category <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
               <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category)">{{category}}</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
+              <li><a href="#" ng-click="filter_category('all')">All categories</a></li>
             </ul>
           </li>
         </ul>
@@ -73,11 +73,13 @@
                TBD: are there any time filters at play here
               <li><a href="" ng-click="showMyEvents()">My events</a></li>
               -->
+              <!--
               <li role="separator" class="divider"></li>
               <li><a>Current center: <strong>{{center.lat}} {{center.lng}}</strong> </a></li>
               <li><a>Markers: <strong>{{markersAll.length}}</strong></a></li>
               <li><a>Cat Filtered Markers: <strong>{{markers.length}}</strong></a></li>
               <li><a>Search Filtered Markers: <strong>{{markersFiltered.length}}</strong></a></li>
+            -->
             </ul>
           </li>
         </ul>
@@ -85,14 +87,13 @@
     </div><!-- /.container-fluid -->
   </nav>
 
+  <div role="main">
+    <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      {{alert.message}}
+    </div>
 
-    <div role="main">
-      <div class="alert {{alert.type}} alert-dismissible alertPanel" role="alert" ng-show="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        {{alert.message}}
-      </div>
-
-      <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
+    <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
 
       <!-- Create Modal -->
       <div class="modal fade" id="bofModal" tabindex="-1" role="dialog" aria-labelledby="bofModalLabel">
@@ -191,7 +192,7 @@
     <!-- grunt concatenated app files -->
     <script src="js/dist/all.min.js"></script>
 
-
+  </div>
 
 </body>
 
